--- a/public/en/index.html
+++ b/public/en/index.html
@@ -6,15 +6,15 @@
     <meta name="description" content="Описание страницы главная">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/fav/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
-    <link rel="manifest" href="/fav/site.webmanifest">
-    <link rel="mask-icon" href="/fav/safari-pinned-tab.svg" color="#292b34">
+    <link rel="icon" href="../fav/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../fav/favicon-16x16.png">
+    <link rel="manifest" href="../fav/site.webmanifest">
+    <link rel="mask-icon" href="../fav/safari-pinned-tab.svg" color="#292b34">
     <meta name="msapplication-TileColor" content="#292b34">
     <meta name="theme-color" content="#292b34">
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="../css/common.css">
   </head>
   <body>
     <div class="page">
@@ -203,6 +203,6 @@
       </footer>
     </div>
   </body>
-  <script src="/js/vendors/jquery-3.4.1.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="../js/vendors/jquery-3.4.1.min.js"></script>
+  <script src="../js/main.js"></script>
 </html>
