--- a/public/en/index.html
+++ b/public/en/index.html
@@ -21,7 +21,7 @@
       <div class="page__content">
         <div class="header-page">
           <div class="container header-page__wrap">
-            <div class="logo header-page__logo"><a class="logo__link" href="/"><img class="logo__img" src="../../img/logo.svg" alt="SaveToFuture"></a></div>
+            <div class="logo header-page__logo"><a class="logo__link" href="/"><img class="logo__img" src="../img/logo.svg" alt="SaveToFuture"></a></div>
             <nav class="nav header-page__nav">
               <ul class="menu">
                 <li class="menu__item active"><a class="menu__link" href="index.html#about">About us</a>
@@ -40,7 +40,7 @@
               <div class="lang-swith">
                 <div class="lang-swith__control"><span class="lang-swith__lang">en</span>
                   <svg class="ico ico-mono-world">
-                    <use xlink:href="/img/sprite-mono.svg#ico-mono-world"></use>
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-world"></use>
                   </svg>
                 </div>
               </div>
@@ -59,7 +59,7 @@
                     <p>More encrypted than cloud storage</p>
                   </div><a class="btn" href="#">Get started
                     <svg class="ico ico-mono-arrow-right">
-                      <use xlink:href="/img/sprite-mono.svg#ico-mono-arrow-right"></use>
+                      <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
                     </svg></a>
                 </div>
                 <div class="intro__img"><img src="../img/content/data-icon.png" alt=""></div>
