--- a/public/en/index.html
+++ b/public/en/index.html
@@ -165,33 +165,52 @@
           </div>
         </section>
         <section class="section section--full">
+          <svg id="svg-work-line" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
           <div class="work">
             <div class="container">
               <h2 class="title-section">How it works?</h2>
-              <div class="work">
-                <div class="work__item">
-                  <div class="work__txt">Create a secure capsule and put the files you want to close securely in it</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+              <div class="work-list">
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">Create a secure capsule and put the files you want to close securely in it</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="work__item">
-                  <div class="work__txt">Set the capsule storage period and the event by which the capsule will be opened in the future. The storage period can be from 1 month to 50 years</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">Set the capsule storage period and the event by which the capsule will be opened in the future. The storage period can be from 1 month to 50 years</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="work__item">
-                  <div class="work__txt">Set the list of destinations to which files are to be sent. Or other ways to manipulate materials</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">Set the list of destinations to which files are to be sent. Or other ways to manipulate materials</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="work__item">
-                  <div class="work__txt">SaveToFuture keeps your files completely encrypted  so that no one can decrypt them</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">SaveToFuture keeps your files completely encrypted  so that no one can decrypt them</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="work__item">
-                  <div class="work__txt">SaveToFuture will track exactly the occurrence of the event you configured</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">SaveToFuture will track exactly the occurrence of the event you configured</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="work__item">
-                  <div class="work__txt">SaveToFuture will extract your files and send them to the addressees in their original form according to your instructions</div>
-                  <div class="work__img"><img src="../img/content/data-icon.png" alt=""></div>
+                <div class="work-list__item">
+                  <div class="work-list__txt-wrap">
+                    <div class="work-list__txt">SaveToFuture will extract your files and send them to the addressees in their original form according to your instructions</div>
+                    <div class="work-list__counter"></div>
+                  </div>
+                  <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
               </div>
             </div>
