--- a/public/en/index.html
+++ b/public/en/index.html
@@ -21,9 +21,13 @@
       <div class="page__content">
         <div class="header-page">
           <div class="container header-page__wrap">
-            <div class="logo header-page__logo"><a class="logo__link" href="/"><img class="logo__img" src="../img/logo.svg" alt="SaveToFuture"></a></div>
+            <div class="logo header-page__logo"><a class="logo__link" href="/">
+                <picture class="logo__img">
+                  <source media="(max-width: 540px)" srcset="../img/logo_short.svg">
+                  <source media="(min-width: 541px)" srcset="../img/logo.svg"><img src="../img/logo.svg" alt="SaveToFuture">
+                </picture></a></div>
             <nav class="nav header-page__nav">
-              <ul class="menu">
+              <ul class="menu menu--header">
                 <li class="menu__item active"><a class="menu__link" href="index.html#about">About us</a>
                 </li>
                 <li class="menu__item"><a class="menu__link" href="pricing.html">Pricing</a>
@@ -44,11 +48,12 @@
                   </svg>
                 </div>
               </div>
-              <div class="header-page__member"><a class="btn btn--light" href="">SIGN IN</a></div>
+              <div class="header-page__member"><a class="btn btn--fill" href="">SIGN IN</a></div>
             </div>
-            <div class="burger"></div>
+            <div class="burger"><span></span><span></span><span></span></div>
           </div>
         </div>
+        <div class="mob-nav"></div>
         <section class="section section--full">
           <div class="intro">
             <div class="container">
@@ -57,7 +62,7 @@
                   <h1 class="intro__title">Deliver your data to the future safely and securely</h1><span class="separator"></span>
                   <div class="intro__txt">
                     <p>More encrypted than cloud storage</p>
-                  </div><a class="btn" href="#">Get started
+                  </div><a class="btn btn--fill" href="#">Get started
                     <svg class="ico ico-mono-arrow-right">
                       <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
                     </svg></a>
@@ -161,6 +166,9 @@
                   <div class="card__img"><img src="../img/content/data-icon.png" alt="Physical delivery of confidential information"></div>
                 </div>
               </div>
+              <footer class="cases__footer">
+                <div class="cases__footer-txt">There are many other cases for which the SaveToFuture service is essential</div><a class="btn btn--outline" href="">MORE USE CASES</a>
+              </footer>
             </div>
           </div>
         </section>
@@ -217,9 +225,76 @@
             </div>
           </div>
         </section>
+        <section class="section section--full">
+          <div class="container">
+            <div class="card">
+              <div class="card__cnt">
+                <div class="card__title-wrap">
+                  <h3 class="card__title">Deliver your data to the future safely and securely</h3><span class="separator"></span>
+                </div>
+                <div class="card__txt">More encrypted than cloud storage</div>
+                <div class="btn btn--fill card__btn">Get started</div>
+              </div>
+              <div class="card__img"><img src="../img/content/data-icon.png" alt=""></div>
+            </div>
+          </div>
+        </section>
       </div>
       <footer class="footer-page">
-        <p>test include</p>
+        <div class="container">
+          <div class="footer-page__wrap">
+            <div class="footer-page__logo"><a href="/"><img src="../../img/logo.svg" alt="SaveToFuture"></a></div>
+            <div class="footer-page__aside">
+              <div class="footer-page__naw-wrap">
+                <h3 class="footer-title">Legal</h3>
+                <ul class="menu menu--footer">
+                  <li class="menu__item"><a class="menu__link" href="terms.html">Terms &amp; Conditions</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="privacy.html">Privacy Policy</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="disclaimer.html">Disclaimer</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="Cookies.html">Cookies Policy</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-page__naw-wrap">
+                <h3 class="footer-title">Company</h3>
+                <ul class="menu menu--footer">
+                  <li class="menu__item active"><a class="menu__link" href="index.html#about">About us</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="pricing.html">Pricing</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="index.html#works">How it works?</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="index.html#cases">Use cases</a>
+                  </li>
+                  <li class="menu__item"><a class="menu__link" href="faq.html">FAQ</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-page__contact">
+                <h3 class="footer-title">Contacts</h3>
+                <p><a href="mailTo: #{$i18n.glob.contacts.mail}">1111@gmail.com</a></p>
+                <p><a href="tel: #{$i18n.glob.contacts.tel}">+ 000 00 000 000</a></p>
+                <p>242733, Ryazan region, G. Spas-Klepiki, st. Kuibyshev, 42-22</p>
+              </div>
+            </div>
+            <div class="footer-page__soc">
+              <div class="soc"><a class="soc__link" href=" #{$i18n.glob.soc.twitter}">
+                  <svg class="ico ico-mono-soc-tw">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-tw"></use>
+                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.facebook}">
+                  <svg class="ico ico-mono-soc-fb">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-fb"></use>
+                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.youtube}">
+                  <svg class="ico ico-mono-soc-youtube">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-youtube"></use>
+                  </svg></a></div>
+              <div class="copyright">	&copy; SaveToFuture <span id="copy-year">2020</span>. All rights reserved</div>
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
