--- a/public/en/index.html
+++ b/public/en/index.html
@@ -23,8 +23,8 @@
           <div class="container header-page__wrap">
             <div class="logo header-page__logo"><a class="logo__link" href="/">
                 <picture class="logo__img">
-                  <source media="(max-width: 540px)" srcset="../img/logo_short.svg">
-                  <source media="(min-width: 541px)" srcset="../img/logo.svg"><img src="../img/logo.svg" alt="SaveToFuture">
+                  <source media="(max-width: 649px)" srcset="../img/logo_short.svg">
+                  <source media="(min-width: 650px)" srcset="../img/logo.svg"><img src="../img/logo.svg" alt="SaveToFuture">
                 </picture></a></div>
             <nav class="nav header-page__nav">
               <ul class="menu menu--header">
@@ -58,16 +58,18 @@
           <div class="intro">
             <div class="container">
               <div class="intro__wrap">
-                <div class="intro__cnt">
-                  <h1 class="intro__title">Deliver your data to the future safely and securely</h1><span class="separator"></span>
-                  <div class="intro__txt">
-                    <p>More encrypted than cloud storage</p>
-                  </div><a class="btn btn--fill" href="#">Get started
-                    <svg class="ico ico-mono-arrow-right">
-                      <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
-                    </svg></a>
+                <div class="card">
+                  <div class="card__cnt">
+                    <h1 class="card__title">Deliver your data to the future safely and securely</h1><span class="separator"></span>
+                    <div class="card__txt">
+                      <p>More encrypted than cloud storage</p>
+                    </div><a class="btn btn--fill card__btn" href="#">Get started
+                      <svg class="ico ico-mono-arrow-right">
+                        <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
+                      </svg></a>
+                  </div>
+                  <div class="card__img"><img src="../img/content/data-icon.png" alt=""></div>
                 </div>
-                <div class="intro__img"><img src="../img/content/data-icon.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -120,13 +122,11 @@
                   </div>
                 </div>
               </div>
+              <footer class="section-footer">
+                <div class="btn-wrap"><a class="btn btn--outline" href="">Get started</a></div>
+              </footer>
             </div>
           </div>
-          <footer class="section__footer">
-            <div class="container">
-              <div class="btn-wrap"><a class="btn btn--outline" href="">Get started</a></div>
-            </div>
-          </footer>
         </section>
         <section class="section section--full">
           <div class="cases">
@@ -135,7 +135,7 @@
               <div class="card-list">
                 <div class="card">
                   <div class="card__cnt">
-                    <div class="counter"></div>
+                    <div class="cases__counter"></div>
                     <h3 class="card__title">Handover logins and passwords<span class="separator"></span></h3>
                     <div class="card__txt">Transferring over to a relatives or trusted persons the logins and passwrods to your accounts, which you wish to share with him/them in case of your death, missing, disability, or other reasons</div>
                   </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card">
                   <div class="card__cnt">
-                    <div class="counter"></div>
+                    <div class="cases__counter"></div>
                     <h3 class="card__title">Passing on important information to your heirs<span class="separator"></span></h3>
                     <div class="card__txt">You have a confdential informatio that you want your heirs to recieve in the event of your death, or disadility. You want your heirs to be sent the information itself, or the way how to gain access to such information. </div>
                   </div>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="card">
                   <div class="card__cnt">
-                    <div class="counter"></div>
+                    <div class="cases__counter"></div>
                     <h3 class="card__title">Protection against threats from third parties, for cases of disability and missing<span class="separator"></span></h3>
                     <div class="card__txt">Sending a document (s), and / or a photo (s), or a video message to an addressee (s) in case something happened with you. You cannot allow any of these documents/photos/videos be discolured with anyone in the world ahead of time.</div>
                   </div>
@@ -159,15 +159,15 @@
                 </div>
                 <div class="card">
                   <div class="card__cnt">
-                    <div class="counter"></div>
+                    <div class="cases__counter"></div>
                     <h3 class="card__title">Physical delivery of confidential information<span class="separator"></span></h3>
                     <div class="card__txt">Applies to either case, however you are not sure if the recipient's email / telegram / whatsapp / etc. will still be available when the timer is activated. Or you don't know the email contacts of the recipients. In these cases, you can select the delivery files extracted from the secure capsule to the addressee via courier service (DHL, FedEx, UPS).</div>
                   </div>
                   <div class="card__img"><img src="../img/content/data-icon.png" alt="Physical delivery of confidential information"></div>
                 </div>
               </div>
-              <footer class="cases__footer">
-                <div class="cases__footer-txt">There are many other cases for which the SaveToFuture service is essential</div><a class="btn btn--outline" href="">MORE USE CASES</a>
+              <footer class="section-footer">
+                <div class="section-footer__txt">There are many other cases for which the SaveToFuture service is essential</div><a class="btn btn--outline" href="">MORE USE CASES</a>
               </footer>
             </div>
           </div>
@@ -182,6 +182,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">Create a secure capsule and put the files you want to close securely in it</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -189,6 +190,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">Set the capsule storage period and the event by which the capsule will be opened in the future. The storage period can be from 1 month to 50 years</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -196,6 +198,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">Set the list of destinations to which files are to be sent. Or other ways to manipulate materials</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -203,6 +206,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">SaveToFuture keeps your files completely encrypted  so that no one can decrypt them</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -210,6 +214,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">SaveToFuture will track exactly the occurrence of the event you configured</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -217,6 +222,7 @@
                     <div class="work-list__txt-wrap">
                       <div class="work-list__txt">SaveToFuture will extract your files and send them to the addressees in their original form according to your instructions</div>
                       <div class="work-list__counter"></div>
+                      <div class="work-list__border"></div>
                     </div>
                     <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
                   </div>
@@ -291,13 +297,13 @@
                   <svg class="ico ico-mono-soc-youtube">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-youtube"></use>
                   </svg></a></div>
-              <div class="copyright">	&copy; SaveToFuture <span id="copy-year">2020</span>. All rights reserved</div>
             </div>
+            <div class="copyright">	&copy; SaveToFuture <span id="copy-year">2020</span>. All rights reserved</div>
           </div>
         </div>
       </footer>
     </div>
   </body>
-  <script src="../js/vendors/jquery-3.4.1.min.js"></script>
   <script src="../js/main.js"></script>
+  <script src="../js/index.js"></script>
 </html>
