--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>Main page</title>
@@ -42,7 +42,7 @@
             </nav>
             <div class="header-page__side">
               <div class="lang-swith">
-                <div class="lang-swith__control"><span class="lang-swith__lang">en</span>
+                <div class="lang-swith__control"><span class="lang-swith__lang">en-US</span>
                   <svg class="ico ico-mono-world">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-world"></use>
                   </svg>
