--- a/public/en/pricing.html
+++ b/public/en/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>Main page</title>
@@ -42,7 +42,7 @@
             </nav>
             <div class="header-page__side">
               <div class="lang-swith">
-                <div class="lang-swith__control"><span class="lang-swith__lang">en</span>
+                <div class="lang-swith__control"><span class="lang-swith__lang">en-US</span>
                   <svg class="ico ico-mono-world">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-world"></use>
                   </svg>
@@ -66,20 +66,97 @@
                 </div>
                 <div class="price-cart">
                   <div class="price-cart__img"><img src="../img/pricing-card-1.svg" alt=""></div>
-                  <div class="price-cart__cost">$<span>10.5 / </span><span class="price-cart__small">Month</span></div>
+                  <div class="price-cart__cost">$<span>20 / </span><span class="price-cart__small">Month</span></div>
                   <div class="price-cart__footer">From 25 to 100 Mb</div>
                 </div>
                 <div class="price-cart">
                   <div class="price-cart__img"><img src="../img/pricing-card-2.svg" alt=""></div>
-                  <div class="price-cart__cost">$<span>30.25 / </span><span class="price-cart__small">Month</span></div>
-                  <div class="price-cart__footer">From 100 to 1000 Mb</div>
+                  <div class="price-cart__cost">$<span>30.5 / </span><span class="price-cart__small">Month</span></div>
+                  <div class="price-cart__footer">From 100 to 1024 Mb</div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="pricing section">
+          <div class="reduction section">
             <div class="container">
               <div class="h2 title-section">Price reduction<span class="subtitle-section">Price discount is based on secure capsule storage duration</span></div>
+              <div class="reduction__item">
+              </div>
+              <div class="reduction__item">
+                <div class="reduction__title">From 1 to 2 years</div>
+                <div class="reduction__procentage">10</div>
+              </div>
+              <div class="reduction__item">
+                <div class="reduction__title">From 2 to 5 years</div>
+                <div class="reduction__procentage">20</div>
+              </div>
+              <div class="reduction__item">
+                <div class="reduction__title">From 5 to 15 years</div>
+                <div class="reduction__procentage">30</div>
+              </div>
+              <div class="reduction__item">
+                <div class="reduction__title">More than 15 years</div>
+                <div class="reduction__procentage">45</div>
+              </div>
+            </div>
+          </div>
+          <div class="courier section">
+            <div class="container">
+              <div class="h2 title-section">Courier service<span class="subtitle-section">Delivery of data with express courier service </span></div>
+              <div class="courier__list"><img src="../img/logo_DHL.svg" alt="DHL"><img src="../img/logo_FedEx.svg" alt="FedEx"><img src="../img/logo_UPS.svg" alt="UPS"></div>
+              <div class="courier__txt">
+                <p>The cost of data delivery by courier - 150$</p>
+                <p>Data delivery is possible by the following services: <strong>DHL Same Day Jetline, FedEx International Next Flight, UPS Express Critical</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="calc section">
+            <div class="container">
+              <div class="h2 title-section">Calculate the cost of the secure capsule</div>
+              <form class="calc-form" action="" name="calc">
+                <div class="calc-form__left">
+                  <div class="calc-form__title">Size of your data to be saved in Secure Capsule</div>
+                  <div class="calc-form__section">
+                    <div class="inp-styl">
+                      <input id="size_store0" type="radio" name="calcStorage" checked value="10.5">
+                      <label for="size_store0">Less than 25 Mb</label>
+                    </div>
+                    <div class="inp-styl">
+                      <input id="size_store1" type="radio" name="calcStorage" value="20">
+                      <label for="size_store1">From 25 to 100 Mb</label>
+                    </div>
+                    <div class="inp-styl">
+                      <input id="size_store2" type="radio" name="calcStorage" value="30.5">
+                      <label for="size_store2">From 100 to 1024 Mb</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="calc-form__body">
+                  <div class="calc-form__title">Storage duration</div>
+                  <div class="calc-form__time range-wrap">
+                    <input class="range" type="range" min="1" max="1000" name="calcTime" value="1" data-duration="1">
+                    <output class="bubble"></output>
+                  </div>
+                  <div class="calc-form__footer">
+                    <div class="calc-form__courier">
+                      <div class="inp-styl">
+                        <input id="courierPrice" type="checkbox" name="courierPrice" value="150">
+                        <label for="courierPrice">Need data delivery with express courier service</label>
+                      </div>
+                    </div>
+                    <div class="calc-form__prices">
+                      <div class="calc-form__prices-item">
+                        <div class="calc-form__prices-title">Discount</div>
+                        <div class="calc-form__prices-vol-discount" id="js-calc-discount">0%</div>
+                      </div>
+                      <div class="calc-form__prices-item">
+                        <div class="calc-form__prices-title">Total price</div>
+                        <div class="calc-form__prices-vol-total" id="js-calc-total">$10.5</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </section>
