--- a/public/en/index.html
+++ b/public/en/index.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="menu__item"><a class="menu__link" href="index.html#works">How it works?</a>
                 </li>
-                <li class="menu__item"><a class="menu__link" href="index.html#cases">Use cases</a>
+                <li class="menu__item"><a class="menu__link" href="cases.html#cases">Use cases</a>
                 </li>
                 <li class="menu__item"><a class="menu__link" href="faq.html">FAQ</a>
                 </li>
@@ -273,7 +273,7 @@
                   </li>
                   <li class="menu__item"><a class="menu__link" href="index.html#works">How it works?</a>
                   </li>
-                  <li class="menu__item"><a class="menu__link" href="index.html#cases">Use cases</a>
+                  <li class="menu__item"><a class="menu__link" href="cases.html#cases">Use cases</a>
                   </li>
                   <li class="menu__item"><a class="menu__link" href="faq.html">FAQ</a>
                   </li>
@@ -304,6 +304,6 @@
       </footer>
     </div>
   </body>
-  <script src="../js/main.js"></script>
+  <script src="../js/vendor.js"></script>
   <script src="../js/index.js"></script>
 </html>
