--- a/public/en/pricing.html
+++ b/public/en/pricing.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="menu__item"><a class="menu__link" href="index.html#works">How it works?</a>
                 </li>
-                <li class="menu__item"><a class="menu__link" href="index.html#cases">Use cases</a>
+                <li class="menu__item"><a class="menu__link" href="cases.html#cases">Use cases</a>
                 </li>
                 <li class="menu__item"><a class="menu__link" href="faq.html">FAQ</a>
                 </li>
@@ -54,110 +54,128 @@
           </div>
         </div>
         <div class="mob-nav"></div>
-        <section class="section section--full">
-          <div class="pricing section">
-            <div class="container">
-              <div class="h1 title-section">Pricing<span class="subtitle-section">Price for secure capsule is based on total size of files that you want to close in it</span></div>
-              <div class="price-carts">
-                <div class="price-cart">
-                  <div class="price-cart__img"><img src="../img/pricing-card-0.svg" alt=""></div>
-                  <div class="price-cart__cost">$<span>10.5 / </span><span class="price-cart__small">Month</span></div>
-                  <div class="price-cart__footer">Less than 25 Mb</div>
-                </div>
-                <div class="price-cart">
-                  <div class="price-cart__img"><img src="../img/pricing-card-1.svg" alt=""></div>
-                  <div class="price-cart__cost">$<span>20 / </span><span class="price-cart__small">Month</span></div>
-                  <div class="price-cart__footer">From 25 to 100 Mb</div>
-                </div>
-                <div class="price-cart">
-                  <div class="price-cart__img"><img src="../img/pricing-card-2.svg" alt=""></div>
-                  <div class="price-cart__cost">$<span>30.5 / </span><span class="price-cart__small">Month</span></div>
-                  <div class="price-cart__footer">From 100 to 1024 Mb</div>
-                </div>
+        <section class="pricing section">
+          <div class="container">
+            <div class="h1 title-section">Pricing<span class="subtitle-section">Price for secure capsule is based on total size of files that you want to close in it</span></div>
+            <div class="price-carts">
+              <div class="price-cart">
+                <div class="price-cart__img"><img src="../img/pricing-card-0.svg" alt=""></div>
+                <div class="price-cart__cost">$<span>10.5 / </span><span class="price-cart__small">Month</span></div>
+                <div class="price-cart__footer">Less than 25 Mb</div>
+              </div>
+              <div class="price-cart">
+                <div class="price-cart__img"><img src="../img/pricing-card-1.svg" alt=""></div>
+                <div class="price-cart__cost">$<span>20 / </span><span class="price-cart__small">Month</span></div>
+                <div class="price-cart__footer">From 25 to 100 Mb</div>
+              </div>
+              <div class="price-cart">
+                <div class="price-cart__img"><img src="../img/pricing-card-2.svg" alt=""></div>
+                <div class="price-cart__cost">$<span>30.5 / </span><span class="price-cart__small">Month</span></div>
+                <div class="price-cart__footer">From 100 to 1024 Mb</div>
               </div>
             </div>
           </div>
-          <div class="reduction section">
-            <div class="container">
-              <div class="h2 title-section">Price reduction<span class="subtitle-section">Price discount is based on secure capsule storage duration</span></div>
-              <div class="reduction__item">
-              </div>
+        </section>
+        <section class="reduction section">
+          <div class="container">
+            <div class="h2 title-section">Price reduction<span class="subtitle-section">Price discount is based on secure capsule storage duration</span></div>
+            <div class="reduction__items">
               <div class="reduction__item">
                 <div class="reduction__title">From 1 to 2 years</div>
-                <div class="reduction__procentage">10</div>
+                <div class="reduction__procentage"><span>10%</span></div>
               </div>
               <div class="reduction__item">
                 <div class="reduction__title">From 2 to 5 years</div>
-                <div class="reduction__procentage">20</div>
+                <div class="reduction__procentage"><span>20%</span></div>
               </div>
               <div class="reduction__item">
                 <div class="reduction__title">From 5 to 15 years</div>
-                <div class="reduction__procentage">30</div>
+                <div class="reduction__procentage"><span>30%</span></div>
               </div>
               <div class="reduction__item">
                 <div class="reduction__title">More than 15 years</div>
-                <div class="reduction__procentage">45</div>
+                <div class="reduction__procentage"><span>45%</span></div>
               </div>
             </div>
           </div>
-          <div class="courier section">
-            <div class="container">
-              <div class="h2 title-section">Courier service<span class="subtitle-section">Delivery of data with express courier service </span></div>
-              <div class="courier__list"><img src="../img/logo_DHL.svg" alt="DHL"><img src="../img/logo_FedEx.svg" alt="FedEx"><img src="../img/logo_UPS.svg" alt="UPS"></div>
-              <div class="courier__txt">
-                <p>The cost of data delivery by courier - 150$</p>
-                <p>Data delivery is possible by the following services: <strong>DHL Same Day Jetline, FedEx International Next Flight, UPS Express Critical</strong></p>
-              </div>
+        </section>
+        <section class="courier section">
+          <div class="container">
+            <div class="h2 title-section">Courier service<span class="subtitle-section">Delivery of data with express courier service </span></div>
+            <div class="courier__list"><img src="../img/logo_DHL.svg" alt="DHL"><img src="../img/logo_FedEx.svg" alt="FedEx"><img src="../img/logo_UPS.svg" alt="UPS"></div>
+            <div class="courier__txt">
+              <p>The cost of data delivery by courier - 150$</p>
+              <p>Data delivery is possible by the following services: <strong>DHL Same Day Jetline, FedEx International Next Flight, UPS Express Critical</strong></p>
             </div>
           </div>
-          <div class="calc section">
-            <div class="container">
-              <div class="h2 title-section">Calculate the cost of the secure capsule</div>
-              <form class="calc-form" action="" name="calc">
-                <div class="calc-form__left">
-                  <div class="calc-form__title">Size of your data to be saved in Secure Capsule</div>
-                  <div class="calc-form__section">
+        </section>
+        <section class="calc section">
+          <div class="container">
+            <div class="h2 title-section">Calculate the cost of the secure capsule</div>
+            <form class="calc-form" action="" name="calc">
+              <div class="calc-form__left">
+                <div class="calc-form__title">Size of your data to be saved in Secure Capsule</div>
+                <div class="calc-form__section">
+                  <div class="inp-styl">
+                    <input id="size_store0" type="radio" name="calcStorage" checked value="10.5">
+                    <label for="size_store0">Less than 25 Mb</label>
+                  </div>
+                  <div class="inp-styl">
+                    <input id="size_store1" type="radio" name="calcStorage" value="20">
+                    <label for="size_store1">From 25 to 100 Mb</label>
+                  </div>
+                  <div class="inp-styl">
+                    <input id="size_store2" type="radio" name="calcStorage" value="30.5">
+                    <label for="size_store2">From 100 to 1024 Mb</label>
+                  </div>
+                </div>
+              </div>
+              <div class="calc-form__body">
+                <div class="calc-form__title">Storage duration</div>
+                <div class="calc-form__time range-wrap"><span class="range-sel"></span>
+                  <input class="range" type="range" min="1" max="1000" name="calcTime" value="1" data-duration="1">
+                  <output class="bubble"></output>
+                </div>
+                <div class="calc-form__footer">
+                  <div class="calc-form__courier">
                     <div class="inp-styl">
-                      <input id="size_store0" type="radio" name="calcStorage" checked value="10.5">
-                      <label for="size_store0">Less than 25 Mb</label>
+                      <input id="courierPrice" type="checkbox" name="courierPrice" value="150">
+                      <label for="courierPrice">Need data delivery with express courier service</label>
                     </div>
-                    <div class="inp-styl">
-                      <input id="size_store1" type="radio" name="calcStorage" value="20">
-                      <label for="size_store1">From 25 to 100 Mb</label>
+                  </div>
+                  <div class="calc-form__prices">
+                    <div class="calc-form__prices-item">
+                      <div class="calc-form__prices-title">Discount</div>
+                      <div class="calc-form__prices-vol-discount" id="js-calc-discount">0%</div>
                     </div>
-                    <div class="inp-styl">
-                      <input id="size_store2" type="radio" name="calcStorage" value="30.5">
-                      <label for="size_store2">From 100 to 1024 Mb</label>
+                    <div class="calc-form__prices-item">
+                      <div class="calc-form__prices-title">Total price</div>
+                      <div class="calc-form__prices-vol-total" id="js-calc-total">$10.5</div>
                     </div>
                   </div>
                 </div>
-                <div class="calc-form__body">
-                  <div class="calc-form__title">Storage duration</div>
-                  <div class="calc-form__time range-wrap">
-                    <input class="range" type="range" min="1" max="1000" name="calcTime" value="1" data-duration="1">
-                    <output class="bubble"></output>
-                  </div>
-                  <div class="calc-form__footer">
-                    <div class="calc-form__courier">
-                      <div class="inp-styl">
-                        <input id="courierPrice" type="checkbox" name="courierPrice" value="150">
-                        <label for="courierPrice">Need data delivery with express courier service</label>
-                      </div>
-                    </div>
-                    <div class="calc-form__prices">
-                      <div class="calc-form__prices-item">
-                        <div class="calc-form__prices-title">Discount</div>
-                        <div class="calc-form__prices-vol-discount" id="js-calc-discount">0%</div>
-                      </div>
-                      <div class="calc-form__prices-item">
-                        <div class="calc-form__prices-title">Total price</div>
-                        <div class="calc-form__prices-vol-total" id="js-calc-total">$10.5</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
+              </div>
+            </form>
+          </div>
+        </section>
+        <section class="price-included section">
+          <div class="container">
+            <div class="h2 title-section">What is included in the price?</div>
+            <ul class="ul-list">
+              <li class="ul-list__item">Storing your files fully encrypted with the best encryption algorithms</li>
+              <li class="ul-list__item">Absence of encryption keys in online</li>
+              <li class="ul-list__item">Precise execution of your instructions for delivering files to your addressees</li>
+              <li class="ul-list__item">Multi-step backup of encrypted secure capsules</li>
+              <li class="ul-list__item">Safe and reliable storages of secure capsules for a period from 1 month to 50 years</li>
+              <li class="ul-list__item">Option to prohibit the deletion of data ahead of time</li>
+              <li class="ul-list__item">Option to prevent changes to secure capsules settings</li>
+              <li class="ul-list__item">No one could decrypt your files from a secure capsule</li>
+              <li class="ul-list__item">Optionally delivery of data with premium express courier services</li>
+            </ul>
+            <div class="btn-wrap btn-wrap--center"><a class="btn btn--fill" href="#">Get started
+                <svg class="ico ico-mono-arrow-right">
+                  <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
+                </svg></a></div>
           </div>
         </section>
       </div>
@@ -188,7 +206,7 @@
                   </li>
                   <li class="menu__item"><a class="menu__link" href="index.html#works">How it works?</a>
                   </li>
-                  <li class="menu__item"><a class="menu__link" href="index.html#cases">Use cases</a>
+                  <li class="menu__item"><a class="menu__link" href="cases.html#cases">Use cases</a>
                   </li>
                   <li class="menu__item"><a class="menu__link" href="faq.html">FAQ</a>
                   </li>
@@ -219,6 +237,6 @@
       </footer>
     </div>
   </body>
-  <script src="../js/main.js"></script>
+  <script src="../js/vendor.js"></script>
   <script src="../js/pricing.js"></script>
 </html>
