--- a/public/en/pricing.html
+++ b/public/en/pricing.html
@@ -182,7 +182,7 @@
       <footer class="footer-page">
         <div class="container">
           <div class="footer-page__wrap">
-            <div class="footer-page__logo"><a href="/"><img src="../../img/logo.svg" alt="SaveToFuture"></a></div>
+            <div class="footer-page__logo"><a href="/"><img src="../img/logo.svg" alt="SaveToFuture"></a></div>
             <div class="footer-page__aside">
               <div class="footer-page__naw-wrap">
                 <h3 class="footer-title">Legal</h3>
