--- a/public/en/index.html
+++ b/public/en/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="mob-nav"></div>
-        <section class="section section--full">
+        <section class="section section--full section--dark">
           <div class="intro">
             <div class="container">
               <div class="intro__wrap">
@@ -68,7 +68,7 @@
                         <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
                       </svg></a>
                   </div>
-                  <div class="card__img"><img src="../img/content/data-icon.png" alt=""></div>
+                  <div class="card__img"><img src="../img/content/index-intro.png" alt="Deliver your data to the future safely and securely"></div>
                 </div>
               </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
                   <div class="card swiper-slide">
-                    <div class="card__img"><img src="../img/content/data-icon.png" alt="Secure data storage in encrypted secure capsules"></div>
+                    <div class="card__img"><img src="../img/content/slider-1.png" alt="Secure data storage in encrypted secure capsules"></div>
                     <div class="card__title-wrap">
                       <h3 class="card__title">Secure data storage in encrypted secure capsules</h3><span class="separator"></span>
                     </div>
@@ -93,7 +93,7 @@
                     </ul>
                   </div>
                   <div class="card swiper-slide">
-                    <div class="card__img"><img src="../img/content/data-icon.png" alt="Слайд еще какой-то"></div>
+                    <div class="card__img"><img src="../img/content/slider-2.png" alt="Слайд еще какой-то"></div>
                     <div class="card__title-wrap">
                       <h3 class="card__title">Слайд еще какой-то</h3><span class="separator"></span>
                     </div>
@@ -102,7 +102,7 @@
                     </div>
                   </div>
                   <div class="card swiper-slide">
-                    <div class="card__img"><img src="../img/content/data-icon.png" alt="Слайд еще какой-то 3"></div>
+                    <div class="card__img"><img src="../img/content/slider-3.png" alt="Слайд еще какой-то 3"></div>
                     <div class="card__title-wrap">
                       <h3 class="card__title">Слайд еще какой-то 3</h3><span class="separator"></span>
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                   </div>
                   <div class="card swiper-slide">
-                    <div class="card__img"><img src="../img/content/data-icon.png" alt="Слайд еще какой-то 4"></div>
+                    <div class="card__img"><img src="../img/content/slider-4.png" alt="Слайд еще какой-то 4"></div>
                     <div class="card__title-wrap">
                       <h3 class="card__title">Слайд еще какой-то 4</h3><span class="separator"></span>
                     </div>
@@ -128,7 +128,7 @@
             </div>
           </div>
         </section>
-        <section class="section section--full">
+        <section class="section section--full section--dark">
           <div class="cases">
             <div class="container">
               <h2 class="title-section">Use cases<span class="subtitle-section">Why do you need the SaveToFuture service?</span></h2>
@@ -139,7 +139,7 @@
                     <h3 class="card__title">Handover logins and passwords<span class="separator"></span></h3>
                     <div class="card__txt">Transferring over to a relatives or trusted persons the logins and passwrods to your accounts, which you wish to share with him/them in case of your death, missing, disability, or other reasons</div>
                   </div>
-                  <div class="card__img"><img src="../img/content/data-icon.png" alt="Handover logins and passwords"></div>
+                  <div class="card__img"><img src="../img/content/cases-1.png" alt="Handover logins and passwords"></div>
                 </div>
                 <div class="card">
                   <div class="card__cnt">
@@ -147,7 +147,7 @@
                     <h3 class="card__title">Passing on important information to your heirs<span class="separator"></span></h3>
                     <div class="card__txt">You have a confdential informatio that you want your heirs to recieve in the event of your death, or disadility. You want your heirs to be sent the information itself, or the way how to gain access to such information. </div>
                   </div>
-                  <div class="card__img"><img src="../img/content/data-icon.png" alt="Passing on important information to your heirs"></div>
+                  <div class="card__img"><img src="../img/content/cases-2.png" alt="Passing on important information to your heirs"></div>
                 </div>
                 <div class="card">
                   <div class="card__cnt">
@@ -155,7 +155,7 @@
                     <h3 class="card__title">Protection against threats from third parties, for cases of disability and missing<span class="separator"></span></h3>
                     <div class="card__txt">Sending a document (s), and / or a photo (s), or a video message to an addressee (s) in case something happened with you. You cannot allow any of these documents/photos/videos be discolured with anyone in the world ahead of time.</div>
                   </div>
-                  <div class="card__img"><img src="../img/content/data-icon.png" alt="Protection against threats from third parties, for cases of disability and missing"></div>
+                  <div class="card__img"><img src="../img/content/cases-3.png" alt="Protection against threats from third parties, for cases of disability and missing"></div>
                 </div>
                 <div class="card">
                   <div class="card__cnt">
@@ -163,7 +163,7 @@
                     <h3 class="card__title">Physical delivery of confidential information<span class="separator"></span></h3>
                     <div class="card__txt">Applies to either case, however you are not sure if the recipient's email / telegram / whatsapp / etc. will still be available when the timer is activated. Or you don't know the email contacts of the recipients. In these cases, you can select the delivery files extracted from the secure capsule to the addressee via courier service (DHL, FedEx, UPS).</div>
                   </div>
-                  <div class="card__img"><img src="../img/content/data-icon.png" alt="Physical delivery of confidential information"></div>
+                  <div class="card__img"><img src="../img/content/cases-4.png" alt="Physical delivery of confidential information"></div>
                 </div>
               </div>
               <footer class="section-footer">
@@ -184,7 +184,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-1.png" alt="Create a secure capsule and put the files you want to close securely in it"></div>
                   </div>
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -192,7 +192,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-2.png" alt="Set the capsule storage period and the event by which the capsule will be opened in the future. The storage period can be from 1 month to 50 years"></div>
                   </div>
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -200,7 +200,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-3.png" alt="Set the list of destinations to which files are to be sent. Or other ways to manipulate materials"></div>
                   </div>
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -208,7 +208,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-4.png" alt="SaveToFuture keeps your files completely encrypted  so that no one can decrypt them"></div>
                   </div>
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -216,7 +216,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-5.png" alt="SaveToFuture will track exactly the occurrence of the event you configured"></div>
                   </div>
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -224,7 +224,7 @@
                       <div class="work-list__counter"></div>
                       <div class="work-list__border"></div>
                     </div>
-                    <div class="work-list__img"><img src="../img/content/data-icon.png" alt=""></div>
+                    <div class="work-list__img"><img src="../img/content/works-6.png" alt="SaveToFuture will extract your files and send them to the addressees in their original form according to your instructions"></div>
                   </div>
                 </div>
               </div>
@@ -241,7 +241,7 @@
                 <div class="card__txt">More encrypted than cloud storage</div>
                 <div class="btn btn--fill card__btn">Get started</div>
               </div>
-              <div class="card__img"><img src="../img/content/data-icon.png" alt=""></div>
+              <div class="card__img"><img src="../img/content/footer-banner.png" alt="Deliver your data to the future safely and securely"></div>
             </div>
           </div>
         </section>
